Create the calculator interface

--- a/index.html
+++ b/index.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./styles/style.css">
-	<script src="./scripts/script.js" defer></script>
-	<title>Calculator</title>
-</head>
-<body>
-	<h1>Calculator</h1>
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="./styles/style.css">
+		<script src="./scripts/script.js" defer></script>
+		<title>Calculator</title>
+	</head>
+	<body>
+		<header>
+			<h1>Calculator</h1>
+		</header>
+		<main>
+			<div id="display"><p>0</p></div>
+			<div class="row">
+				<button>AC</button>
+				<button>C</button>
+			</div>
+			<div class="row">
+				<button>1</button>
+				<button>2</button>
+				<button>3</button>
+				<button>/</button>
+			</div>
+			<div class="row">
+				<button>4</button>
+				<button>5</button>
+				<button>6</button>
+				<button>x</button>
+			</div>
+			<div class="row">
+				<button>7</button>
+				<button>8</button>
+				<button>9</button>
+				<button>-</button>
+			</div>
+			<div class="row">
+				<button>.</button>
+				<button>0</button>
+				<button>=</button>
+				<button>+</button>
+			</div>
+		</main>
+	</body>
 </html>
