Edit CSS, link the interface to the math functions

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="./styles/style.css">
+		<link rel="icon" href="https://fav.farm/🧮" />
 		<script src="./scripts/script.js" defer></script>
 		<title>Calculator</title>
 	</head>
@@ -14,32 +15,32 @@
 		<main>
 			<div id="display"><p>0</p></div>
 			<div class="row">
-				<button>AC</button>
-				<button>C</button>
+				<button name="clear">AC</button>
+				<button name="backspace">C</button>
 			</div>
 			<div class="row">
-				<button>1</button>
-				<button>2</button>
-				<button>3</button>
-				<button>/</button>
+				<button name="number">1</button>
+				<button name="number">2</button>
+				<button name="number">3</button>
+				<button name="operator">/</button>
 			</div>
 			<div class="row">
-				<button>4</button>
-				<button>5</button>
-				<button>6</button>
-				<button>x</button>
+				<button name="number">4</button>
+				<button name="number">5</button>
+				<button name="number">6</button>
+				<button name="operator">x</button>
 			</div>
 			<div class="row">
-				<button>7</button>
-				<button>8</button>
-				<button>9</button>
-				<button>-</button>
+				<button name="number">7</button>
+				<button name="number">8</button>
+				<button name="number">9</button>
+				<button name="operator">-</button>
 			</div>
 			<div class="row">
 				<button>.</button>
-				<button>0</button>
-				<button>=</button>
-				<button>+</button>
+				<button name="number">0</button>
+				<button name="equals">=</button>
+				<button name="operator">+</button>
 			</div>
 		</main>
 	</body>
